--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,10 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+*.css linguist-detectable=false
+
+*.js linguist-detectable=true
+
+*.html linguist-detectable=false
+
+*.xml linguist-detectable=false
